--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~43.0.2",
-    "expo-camera": "^8.3.1",
-    "expo-image-picker": "^8.3.0",
+    "expo-camera": "~12.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "firebase": "8.2.3",
     "react": "17.0.1",
